--- a/_titlepage.tex
+++ b/_titlepage.tex
@@ -41,7 +41,7 @@
 		First Reviewer: \> Prof. Dr. Janick Edinger \\
 		Second Reviewer: \> Philipp Kisters \\
 		~ \\
-		Abgabe: 08.2023
+		Submission Deadline: 03.09.2023
 	\end{tabbing}
 	
 	% Titlepage back
