--- a/chapter1.tex
+++ b/chapter1.tex
@@ -45,6 +45,10 @@ Goal is: implement a temperature map based on ML that interpolates missing data 
 Compare prediction quality of different type of models (DL, random forests etc.) based on cross-validation (simulate missing data by leaving data points out on purpose) -> experiment with different intervals, densities etc. -> could also compare to Krigin (as a typical geostatistical approach for temperature interpolation)
 Subgoal: In order to achive this, we also need high quality data-sets to train and validate the model -> source them from OpenData platforms
 
+Forschungsfragen:
+- Which machine learning-based interpolation methods are available and how do they differ from each other?
+- How can machine learning-based interpolation methods be used in the context of UHI detection and how do they perform compared to each other?
+
 \section{Structure of this work}
 
 Research methods:\\
