--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,6 @@
 
 	% titlepage
 
-
 	% roman page numbering
 	\frontmatter
 	
@@ -46,10 +45,7 @@
 	% Related Work
 	\include{chapter2}
 
-	% System architecture
-	\include{chapter3}
-
-	% Machine Learning Model Design
+	% Machine Learning based Interpolation
 	\include{chapter4}
 
 	% Data Set Preparation
