--- a/references.bib
+++ b/references.bib
@@ -678,3 +678,62 @@
   year={2018},
   school={Universit{\"a}t Hamburg}
 }
+
+@article{meinshausen2006quantile,
+  title={Quantile regression forests.},
+  author={Meinshausen, Nicolai and Ridgeway, Greg},
+  journal={Journal of machine learning research},
+  volume={7},
+  number={6},
+  year={2006}
+}
+
+@article{breiman1996bagging,
+  title={Bagging predictors},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={24},
+  pages={123--140},
+  year={1996},
+  publisher={Springer}
+}
+
+@article{breiman1999pasting,
+  title={Pasting small votes for classification in large databases and on-line},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={36},
+  pages={85--103},
+  year={1999},
+  publisher={Springer}
+}
+
+@article{ho1998random,
+  title={The random subspace method for constructing decision forests},
+  author={Ho, Tin Kam},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={20},
+  number={8},
+  pages={832--844},
+  year={1998},
+  publisher={Ieee}
+}
+
+@inproceedings{louppe2012ensembles,
+  title={Ensembles on random patches},
+  author={Louppe, Gilles and Geurts, Pierre},
+  booktitle={Machine Learning and Knowledge Discovery in Databases: European Conference, ECML PKDD 2012, Bristol, UK, September 24-28, 2012. Proceedings, Part I 23},
+  pages={346--361},
+  year={2012},
+  organization={Springer}
+}
+
+@article{gorelick2017google,
+  title={Google Earth Engine: Planetary-scale geospatial analysis for everyone},
+  author={Gorelick, Noel and Hancher, Matt and Dixon, Mike and Ilyushchenko, Simon and Thau, David and Moore, Rebecca},
+  journal={Remote sensing of Environment},
+  volume={202},
+  pages={18--27},
+  year={2017},
+  publisher={Elsevier}
+}
